--- a/proxies.yaml
+++ b/proxies.yaml
@@ -10624,7 +10624,20 @@ proxies:
   network: ws
   ws-opts:
     path: linkvws
-- name: 🇫🇷 ✨ AI 139ms | vmess (962)
+- name: 🇨🇦 ✨ AI 139ms | vmess (962)
+  type: vmess
+  server: 172.64.152.23
+  port: 8443
+  uuid: 19e52bf4-1b7d-4bd4-ae66-6ca024436c17
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: true
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /gbt
+- name: 🇫🇷 ✨ AI 139ms | vmess (963)
   type: vmess
   server: 91.134.8.102
   port: 443
@@ -10637,7 +10650,7 @@ proxies:
   network: ws
   ws-opts:
     path: linkvws
-- name: 🇩🇪 ✨ AI 139ms | vmess (963)
+- name: 🇩🇪 ✨ AI 139ms | vmess (964)
   type: vmess
   server: 57.129.59.195
   port: 443
@@ -10650,7 +10663,7 @@ proxies:
   network: ws
   ws-opts:
     path: linkvws
-- name: 🇩🇪 ✨ AI 139ms | vmess (964)
+- name: 🇩🇪 ✨ AI 139ms | vmess (965)
   type: vmess
   server: 57.129.25.26
   port: 443
@@ -10663,7 +10676,7 @@ proxies:
   network: ws
   ws-opts:
     path: linkvws
-- name: 🇩🇪 ✨ AI 139ms | vmess (965)
+- name: 🇩🇪 ✨ AI 139ms | vmess (966)
   type: vmess
   server: 57.129.28.65
   port: 443
@@ -10676,7 +10689,7 @@ proxies:
   network: ws
   ws-opts:
     path: /linkvws
-- name: 🇫🇷 ✨ AI 139ms | vmess (966)
+- name: 🇫🇷 ✨ AI 139ms | vmess (967)
   type: vmess
   server: 141.94.155.224
   port: 443
@@ -10689,7 +10702,7 @@ proxies:
   network: ws
   ws-opts:
     path: linkvws
-- name: 🇫🇷 ✨ AI 139ms | vmess (967)
+- name: 🇫🇷 ✨ AI 139ms | vmess (968)
   type: vmess
   server: 91.134.8.101
   port: 443
@@ -10702,7 +10715,7 @@ proxies:
   network: ws
   ws-opts:
     path: linkvws
-- name: 🇩🇪 ✨ AI 139ms | vmess (968)
+- name: 🇩🇪 ✨ AI 139ms | vmess (969)
   type: vmess
   server: 57.129.25.20
   port: 443
@@ -10715,7 +10728,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🇩🇪 ✨ AI 139ms | vmess (969)
+- name: 🇩🇪 ✨ AI 139ms | vmess (970)
   type: vmess
   server: 57.129.28.212
   port: 443
@@ -10728,7 +10741,7 @@ proxies:
   network: ws
   ws-opts:
     path: linkvws
-- name: 🇩🇪 ✨ AI 139ms | vmess (970)
+- name: 🇩🇪 ✨ AI 139ms | vmess (971)
   type: vmess
   server: 57.129.59.201
   port: 443
@@ -10741,7 +10754,7 @@ proxies:
   network: ws
   ws-opts:
     path: linkvws
-- name: 🇺🇸 ✨ AI 139ms | vmess (971)
+- name: 🇺🇸 ✨ AI 139ms | vmess (972)
   type: vmess
   server: 15.204.64.214
   port: 443
@@ -10754,7 +10767,7 @@ proxies:
   network: ws
   ws-opts:
     path: linkvws
-- name: 🇩🇪 ✨ AI 139ms | vmess (972)
+- name: 🇩🇪 ✨ AI 139ms | vmess (973)
   type: vmess
   server: 57.129.28.215
   port: 443
@@ -10767,7 +10780,7 @@ proxies:
   network: ws
   ws-opts:
     path: linkvws
-- name: 🇩🇪 ✨ AI 139ms | vmess (973)
+- name: 🇩🇪 ✨ AI 139ms | vmess (974)
   type: vmess
   server: 57.129.64.238
   port: 443
@@ -10780,7 +10793,7 @@ proxies:
   network: ws
   ws-opts:
     path: /linkvws
-- name: 🇩🇪 ✨ AI 139ms | vmess (974)
+- name: 🇩🇪 ✨ AI 139ms | vmess (975)
   type: vmess
   server: 57.129.64.199
   port: 443
@@ -10793,7 +10806,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🇫🇷 ✨ AI 139ms | vmess (975)
+- name: 🇫🇷 ✨ AI 139ms | vmess (976)
   type: vmess
   server: 141.94.155.229
   port: 443
@@ -10806,7 +10819,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🇰🇿 ✨ AI 139ms | vmess (976)
+- name: 🇰🇿 ✨ AI 139ms | vmess (977)
   type: vmess
   server: 194.76.18.113
   port: 443
@@ -10819,7 +10832,7 @@ proxies:
   network: ws
   ws-opts:
     path: /obdii.cfd:443/linkws
-- name: 🇬🇧 ✨ AI 139ms | vmess (977)
+- name: 🇬🇧 ✨ AI 139ms | vmess (978)
   type: vmess
   server: 217.163.76.147
   port: 443
@@ -10832,7 +10845,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🇰🇿 ✨ AI 139ms | vmess (978)
+- name: 🇰🇿 ✨ AI 139ms | vmess (979)
   type: vmess
   server: 194.76.18.197
   port: 443
@@ -10845,7 +10858,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🇧🇷 ✨ AI 139ms | vmess (979)
+- name: 🇧🇷 ✨ AI 139ms | vmess (980)
   type: vmess
   server: 185.133.35.178
   port: 443
@@ -10858,7 +10871,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🇺🇸 ✨ AI 139ms | vmess (980)
+- name: 🇺🇸 ✨ AI 139ms | vmess (981)
   type: vmess
   server: 216.221.214.50
   port: 443
@@ -10871,7 +10884,7 @@ proxies:
   network: ws
   ws-opts:
     path: /obdii.cfd:443/linkws
-- name: 🇺🇸 ✨ AI 139ms | vmess (981)
+- name: 🇺🇸 ✨ AI 139ms | vmess (982)
   type: vmess
   server: 69.84.182.16
   port: 443
@@ -10884,7 +10897,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🇺🇸 ✨ AI 139ms | vmess (982)
+- name: 🇺🇸 ✨ AI 139ms | vmess (983)
   type: vmess
   server: 216.24.57.57
   port: 443
@@ -10897,7 +10910,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🇦🇹 ✨ AI 139ms | vmess (983)
+- name: 🇦🇹 ✨ AI 139ms | vmess (984)
   type: vmess
   server: 212.183.88.24
   port: 443
@@ -10910,7 +10923,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🇫🇷 ✨ AI 139ms | vmess (984)
+- name: 🇫🇷 ✨ AI 139ms | vmess (985)
   type: vmess
   server: 129.151.225.228
   port: 8443
@@ -10923,7 +10936,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🇺🇸 ✨ AI 139ms | vmess (985)
+- name: 🇺🇸 ✨ AI 139ms | vmess (986)
   type: vmess
   server: 216.24.57.36
   port: 443
@@ -10936,7 +10949,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🇺🇸 ✨ AI 139ms | vmess (986)
+- name: 🇺🇸 ✨ AI 139ms | vmess (987)
   type: vmess
   server: 192.200.160.214
   port: 443
@@ -10949,7 +10962,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🇦🇹 ✨ AI 139ms | vmess (987)
+- name: 🇦🇹 ✨ AI 139ms | vmess (988)
   type: vmess
   server: 212.183.88.77
   port: 443
@@ -10962,7 +10975,7 @@ proxies:
   network: ws
   ws-opts:
     path: /obdii.cfd:443/linkws
-- name: 🇷🇺 ✨ AI 139ms | 13 (988)
+- name: 🇷🇺 ✨ AI 139ms | 13 (989)
   type: vless
   server: 158.160.202.13
   port: 443
@@ -10972,7 +10985,7 @@ proxies:
   skip-cert-verify: true
   tls: false
   network: tcp
-- name: 🇩🇪 ✨ AI 140ms | vmess (989)
+- name: 🇩🇪 ✨ AI 140ms | vmess (990)
   type: vmess
   server: 57.129.64.157
   port: 443
@@ -10985,7 +10998,7 @@ proxies:
   network: ws
   ws-opts:
     path: linkvws
-- name: 🇩🇪 ✨ AI 140ms | vmess (990)
+- name: 🇩🇪 ✨ AI 140ms | vmess (991)
   type: vmess
   server: 57.129.24.132
   port: 443
@@ -10998,7 +11011,7 @@ proxies:
   network: ws
   ws-opts:
     path: linkvws
-- name: 🇩🇪 ✨ AI 140ms | vmess (991)
+- name: 🇩🇪 ✨ AI 140ms | vmess (992)
   type: vmess
   server: 57.129.28.63
   port: 443
@@ -11011,7 +11024,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🇩🇪 ✨ AI 140ms | vmess (992)
+- name: 🇩🇪 ✨ AI 140ms | vmess (993)
   type: vmess
   server: 57.129.24.130
   port: 443
@@ -11024,7 +11037,7 @@ proxies:
   network: ws
   ws-opts:
     path: linkvws
-- name: 🇩🇪 ✨ AI 140ms | vmess (993)
+- name: 🇩🇪 ✨ AI 140ms | vmess (994)
   type: vmess
   server: 57.129.59.199
   port: 443
@@ -11037,7 +11050,7 @@ proxies:
   network: ws
   ws-opts:
     path: linkvws
-- name: 🇩🇪 ✨ AI 140ms | vmess (994)
+- name: 🇩🇪 ✨ AI 140ms | vmess (995)
   type: vmess
   server: 57.129.28.64
   port: 443
@@ -11050,7 +11063,7 @@ proxies:
   network: ws
   ws-opts:
     path: linkvws
-- name: 🇩🇪 ✨ AI 140ms | vmess (995)
+- name: 🇩🇪 ✨ AI 140ms | vmess (996)
   type: vmess
   server: 57.129.59.193
   port: 443
@@ -11063,7 +11076,7 @@ proxies:
   network: ws
   ws-opts:
     path: /linkvws
-- name: 🇩🇪 ✨ AI 140ms | vmess (996)
+- name: 🇩🇪 ✨ AI 140ms | vmess (997)
   type: vmess
   server: 57.129.28.69
   port: 443
@@ -11076,7 +11089,7 @@ proxies:
   network: ws
   ws-opts:
     path: /linkvws
-- name: 🇩🇪 ✨ AI 140ms | vmess (997)
+- name: 🇩🇪 ✨ AI 140ms | vmess (998)
   type: vmess
   server: 57.129.24.131
   port: 443
@@ -11089,7 +11102,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🇩🇪 ✨ AI 140ms | vmess (998)
+- name: 🇩🇪 ✨ AI 140ms | vmess (999)
   type: vmess
   server: 57.129.25.22
   port: 443
@@ -11102,19 +11115,6 @@ proxies:
   network: ws
   ws-opts:
     path: /linkvws
-- name: 🇩🇪 ✨ AI 140ms | vmess (999)
-  type: vmess
-  server: 57.129.28.213
-  port: 443
-  uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
-  alterId: 0
-  cipher: auto
-  udp: true
-  tls: true
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /
 proxy-groups:
 - name: 🚀 Auto Select
   type: url-test
@@ -12083,34 +12083,34 @@ proxy-groups:
   - 🇨🇦 ✨ AI 138ms | vmess (959)
   - 🇩🇪 ✨ AI 138ms | vmess (960)
   - 🇨🇦 ✨ AI 138ms | vmess (961)
-  - 🇫🇷 ✨ AI 139ms | vmess (962)
-  - 🇩🇪 ✨ AI 139ms | vmess (963)
+  - 🇨🇦 ✨ AI 139ms | vmess (962)
+  - 🇫🇷 ✨ AI 139ms | vmess (963)
   - 🇩🇪 ✨ AI 139ms | vmess (964)
   - 🇩🇪 ✨ AI 139ms | vmess (965)
-  - 🇫🇷 ✨ AI 139ms | vmess (966)
+  - 🇩🇪 ✨ AI 139ms | vmess (966)
   - 🇫🇷 ✨ AI 139ms | vmess (967)
-  - 🇩🇪 ✨ AI 139ms | vmess (968)
+  - 🇫🇷 ✨ AI 139ms | vmess (968)
   - 🇩🇪 ✨ AI 139ms | vmess (969)
   - 🇩🇪 ✨ AI 139ms | vmess (970)
-  - 🇺🇸 ✨ AI 139ms | vmess (971)
-  - 🇩🇪 ✨ AI 139ms | vmess (972)
+  - 🇩🇪 ✨ AI 139ms | vmess (971)
+  - 🇺🇸 ✨ AI 139ms | vmess (972)
   - 🇩🇪 ✨ AI 139ms | vmess (973)
   - 🇩🇪 ✨ AI 139ms | vmess (974)
-  - 🇫🇷 ✨ AI 139ms | vmess (975)
-  - 🇰🇿 ✨ AI 139ms | vmess (976)
-  - 🇬🇧 ✨ AI 139ms | vmess (977)
-  - 🇰🇿 ✨ AI 139ms | vmess (978)
-  - 🇧🇷 ✨ AI 139ms | vmess (979)
-  - 🇺🇸 ✨ AI 139ms | vmess (980)
+  - 🇩🇪 ✨ AI 139ms | vmess (975)
+  - 🇫🇷 ✨ AI 139ms | vmess (976)
+  - 🇰🇿 ✨ AI 139ms | vmess (977)
+  - 🇬🇧 ✨ AI 139ms | vmess (978)
+  - 🇰🇿 ✨ AI 139ms | vmess (979)
+  - 🇧🇷 ✨ AI 139ms | vmess (980)
   - 🇺🇸 ✨ AI 139ms | vmess (981)
   - 🇺🇸 ✨ AI 139ms | vmess (982)
-  - 🇦🇹 ✨ AI 139ms | vmess (983)
-  - 🇫🇷 ✨ AI 139ms | vmess (984)
-  - 🇺🇸 ✨ AI 139ms | vmess (985)
+  - 🇺🇸 ✨ AI 139ms | vmess (983)
+  - 🇦🇹 ✨ AI 139ms | vmess (984)
+  - 🇫🇷 ✨ AI 139ms | vmess (985)
   - 🇺🇸 ✨ AI 139ms | vmess (986)
-  - 🇦🇹 ✨ AI 139ms | vmess (987)
-  - 🇷🇺 ✨ AI 139ms | 13 (988)
-  - 🇩🇪 ✨ AI 140ms | vmess (989)
+  - 🇺🇸 ✨ AI 139ms | vmess (987)
+  - 🇦🇹 ✨ AI 139ms | vmess (988)
+  - 🇷🇺 ✨ AI 139ms | 13 (989)
   - 🇩🇪 ✨ AI 140ms | vmess (990)
   - 🇩🇪 ✨ AI 140ms | vmess (991)
   - 🇩🇪 ✨ AI 140ms | vmess (992)
