--- a/proxies.yaml
+++ b/proxies.yaml
@@ -11948,49 +11948,7 @@ proxies:
   cipher: aes-256-cfb
   password: Xn8jKdmDM00IeO%#$#fJAMtsEAEUOpH/YWYtYqDFnT0SV
   udp: true
-- name: 🇺🇳 ✨ AI 224ms | 250 (993)
-  type: ss
-  server: 103.186.154.250
-  port: 38388
-  cipher: aes-256-cfb
-  password: Xn8jKdmDM00IeO%#$#fJAMtsEAEUOpH/YWYtYqDFnT0SV
-  udp: true
-- name: 🇺🇳 ✨ AI 224ms | 244 (994)
-  type: ss
-  server: 103.186.154.244
-  port: 38388
-  cipher: aes-256-cfb
-  password: Xn8jKdmDM00IeO%#$#fJAMtsEAEUOpH/YWYtYqDFnT0SV
-  udp: true
-- name: 🇻🇳 ✨ AI 224ms | 241 (995)
-  type: ss
-  server: 103.186.154.241
-  port: 38388
-  cipher: aes-256-cfb
-  password: Xn8jKdmDM00IeO%#$#fJAMtsEAEUOpH/YWYtYqDFnT0SV
-  udp: true
-- name: 🇻🇳 ✨ AI 224ms | 45 (996)
-  type: ss
-  server: 103.186.154.45
-  port: 38388
-  cipher: aes-256-cfb
-  password: Xn8jKdmDM00IeO%#$#fJAMtsEAEUOpH/YWYtYqDFnT0SV
-  udp: true
-- name: 🇻🇳 ✨ AI 224ms | 252 (997)
-  type: ss
-  server: 103.186.154.252
-  port: 38388
-  cipher: aes-256-cfb
-  password: Xn8jKdmDM00IeO%#$#fJAMtsEAEUOpH/YWYtYqDFnT0SV
-  udp: true
-- name: 🇻🇳 ✨ AI 224ms | 210 (998)
-  type: ss
-  server: 103.186.154.210
-  port: 38388
-  cipher: aes-256-cfb
-  password: Xn8jKdmDM00IeO%#$#fJAMtsEAEUOpH/YWYtYqDFnT0SV
-  udp: true
-- name: 🇺🇸 ✨ AI 224ms | 169 (999)
+- name: 🇺🇸 ✨ AI 224ms | 169 (993)
   type: vless
   server: 137.184.218.169
   port: 36925
@@ -12000,6 +11958,57 @@ proxies:
   skip-cert-verify: true
   tls: false
   network: tcp
+- name: 🇩🇪 ✨ AI 224ms | 184 (994)
+  type: vless
+  server: 159.69.162.184
+  port: 43233
+  uuid: 00000000-0000-4000-8000-000000000000
+  password: 00000000-0000-4000-8000-000000000000
+  udp: true
+  skip-cert-verify: true
+  tls: false
+  network: ws
+- name: 🇺🇸 ✨ AI 225ms | vmess (995)
+  type: vmess
+  server: 147.135.112.248
+  port: 80
+  uuid: 973c2639-c9c2-484d-ae9b-3d68b2f30d9e
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: false
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /
+- name: 🇻🇳 ✨ AI 225ms | 143 (996)
+  type: ss
+  server: 103.186.154.143
+  port: 38388
+  cipher: aes-256-cfb
+  password: Xn8jKdmDM00IeO%#$#fJAMtsEAEUOpH/YWYtYqDFnT0SV
+  udp: true
+- name: 🇺🇳 ✨ AI 225ms | 176 (997)
+  type: ss
+  server: 103.186.154.176
+  port: 38388
+  cipher: aes-256-cfb
+  password: Xn8jKdmDM00IeO%#$#fJAMtsEAEUOpH/YWYtYqDFnT0SV
+  udp: true
+- name: 🇺🇳 ✨ AI 225ms | 61 (998)
+  type: ss
+  server: 103.186.154.61
+  port: 38388
+  cipher: aes-256-cfb
+  password: Xn8jKdmDM00IeO%#$#fJAMtsEAEUOpH/YWYtYqDFnT0SV
+  udp: true
+- name: 🇻🇳 ✨ AI 225ms | 168 (999)
+  type: ss
+  server: 103.186.154.168
+  port: 38388
+  cipher: aes-256-cfb
+  password: Xn8jKdmDM00IeO%#$#fJAMtsEAEUOpH/YWYtYqDFnT0SV
+  udp: true
 proxy-groups:
 - name: 🚀 Auto Select
   type: url-test
@@ -13000,12 +13009,12 @@ proxy-groups:
   - 🇻🇳 ✨ AI 224ms | 205 (990)
   - 🇺🇳 ✨ AI 224ms | 229 (991)
   - 🇻🇳 ✨ AI 224ms | 214 (992)
-  - 🇺🇳 ✨ AI 224ms | 250 (993)
-  - 🇺🇳 ✨ AI 224ms | 244 (994)
-  - 🇻🇳 ✨ AI 224ms | 241 (995)
-  - 🇻🇳 ✨ AI 224ms | 45 (996)
-  - 🇻🇳 ✨ AI 224ms | 252 (997)
-  - 🇻🇳 ✨ AI 224ms | 210 (998)
-  - 🇺🇸 ✨ AI 224ms | 169 (999)
+  - 🇺🇸 ✨ AI 224ms | 169 (993)
+  - 🇩🇪 ✨ AI 224ms | 184 (994)
+  - 🇺🇸 ✨ AI 225ms | vmess (995)
+  - 🇻🇳 ✨ AI 225ms | 143 (996)
+  - 🇺🇳 ✨ AI 225ms | 176 (997)
+  - 🇺🇳 ✨ AI 225ms | 61 (998)
+  - 🇻🇳 ✨ AI 225ms | 168 (999)
 rules:
 - MATCH,🚀 Auto Select
