--- a/proxies.yaml
+++ b/proxies.yaml
@@ -7799,7 +7799,318 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🥈 🇨🇦 186ms | VMESS (#647)
+- name: 🥈 🇨🇦 180ms | VMESS (#647)
+  type: vmess
+  server: 172.67.169.40
+  port: 443
+  uuid: fa5b55cd-cafc-4de0-a4c8-722e02a9f58e
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: true
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /
+- name: 🥈 🇨🇦 180ms | VMESS (#648)
+  type: vmess
+  server: 104.21.95.16
+  port: 443
+  uuid: fa5b55cd-cafc-4de0-a4c8-722e02a9f58e
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: true
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /
+- name: 🥈 🇨🇦 180ms | VMESS (#649)
+  type: vmess
+  server: 104.21.4.6
+  port: 443
+  uuid: 1052f24e-7b09-45eb-b0c5-d858eb124192
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: true
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /linkws
+- name: 🥈 🇨🇦 180ms | VMESS (#650)
+  type: vmess
+  server: 104.21.83.108
+  port: 443
+  uuid: 6c168fcc-2231-4f3b-8c1e-f6391692df4a
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: true
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /link
+- name: 🥈 🇨🇦 180ms | VMESS (#651)
+  type: vmess
+  server: 172.67.190.208
+  port: 80
+  uuid: 4bf074f4-7e9c-4e4b-a10d-156e26199729
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: false
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /
+- name: 🥈 🇨🇦 180ms | VMESS (#652)
+  type: vmess
+  server: 172.67.183.56
+  port: 80
+  uuid: 4bf074f4-7e9c-4e4b-a10d-156e26199729
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: false
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /
+- name: 🥈 🇨🇦 180ms | VMESS (#653)
+  type: vmess
+  server: 104.18.28.214
+  port: 80
+  uuid: 0ba4a240-1586-4a54-929c-26389c8a4111
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: false
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /
+- name: 🥈 🇺🇸 180ms | VMESS (#654)
+  type: vmess
+  server: 162.159.252.210
+  port: 80
+  uuid: 0ba4a240-1586-4a54-929c-26389c8a4111
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: false
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /
+- name: 🥈 🇨🇦 181ms | VMESS (#655)
+  type: vmess
+  server: 188.114.97.8
+  port: 2087
+  uuid: e3a464d7-ad51-42ee-8059-220154797b50
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: true
+  skip-cert-verify: true
+  network: grpc
+  ws-opts: null
+- name: 🥈 🇺🇸 181ms | VMESS (#656)
+  type: vmess
+  server: 141.101.114.114
+  port: 80
+  uuid: 4bf074f4-7e9c-4e4b-a10d-156e26199729
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: false
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /
+- name: 🥈 🇨🇦 181ms | VMESS (#657)
+  type: vmess
+  server: 104.17.139.69
+  port: 80
+  uuid: 4bf074f4-7e9c-4e4b-a10d-156e26199729
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: false
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /
+- name: 🥈 🇨🇦 181ms | VMESS (#658)
+  type: vmess
+  server: 172.67.153.119
+  port: 80
+  uuid: 4bf074f4-7e9c-4e4b-a10d-156e26199729
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: false
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /
+- name: 🥈 🇨🇦 181ms | VMESS (#659)
+  type: vmess
+  server: 172.67.174.42
+  port: 443
+  uuid: bc864078-dcf3-4bf4-8dbf-ca9f200b56be
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: true
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /linkws
+- name: 🥈 🇨🇦 181ms | VMESS (#660)
+  type: vmess
+  server: 104.21.82.17
+  port: 443
+  uuid: bc864078-dcf3-4bf4-8dbf-ca9f200b56be
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: true
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /linkws
+- name: 🥈 🇨🇷 181ms | VMESS (#661)
+  type: vmess
+  server: 190.93.247.58
+  port: 443
+  uuid: 6c168fcc-2231-4f3b-8c1e-f6391692df4a
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: true
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /
+- name: 🥈 🇨🇦 181ms | VMESS (#662)
+  type: vmess
+  server: 172.67.131.108
+  port: 443
+  uuid: 1052f24e-7b09-45eb-b0c5-d858eb124192
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: true
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /linkws
+- name: 🥈 🇨🇦 181ms | VMESS (#663)
+  type: vmess
+  server: 172.67.244.191
+  port: 443
+  uuid: bc864078-dcf3-4bf4-8dbf-ca9f200b56be
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: true
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /linkws
+- name: 🥈 🇷🇺 181ms | VMESS (#664)
+  type: vmess
+  server: 185.148.104.118
+  port: 443
+  uuid: 6c168fcc-2231-4f3b-8c1e-f6391692df4a
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: true
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /
+- name: 🥈 🇨🇦 181ms | VMESS (#665)
+  type: vmess
+  server: 104.21.55.234
+  port: 443
+  uuid: bc864078-dcf3-4bf4-8dbf-ca9f200b56be
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: true
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /linkws
+- name: 🥈 🇨🇦 181ms | VMESS (#666)
+  type: vmess
+  server: 172.67.223.119
+  port: 443
+  uuid: 6c168fcc-2231-4f3b-8c1e-f6391692df4a
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: true
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /
+- name: 🥈 🇨🇦 181ms | VMESS (#667)
+  type: vmess
+  server: 172.67.138.140
+  port: 443
+  uuid: 441da342-ce90-441e-bff9-d2ceb55e68ca
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: true
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /linkws
+- name: 🥈 🇨🇦 181ms | VMESS (#668)
+  type: vmess
+  server: 172.67.216.29
+  port: 443
+  uuid: 1052f24e-7b09-45eb-b0c5-d858eb124192
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: true
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /
+- name: 🥈 🇨🇦 181ms | VMESS (#669)
+  type: vmess
+  server: 104.21.24.170
+  port: 443
+  uuid: b321fd5d-e6ec-4293-a644-164e3885f52e
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: true
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /
+- name: 🥈 🇨🇦 181ms | VMESS (#670)
+  type: vmess
+  server: 104.21.46.121
+  port: 443
+  uuid: 441da342-ce90-441e-bff9-d2ceb55e68ca
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: true
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /
+- name: 🥈 🇨🇦 186ms | VMESS (#671)
   type: vmess
   server: 104.18.6.138
   port: 443
@@ -7812,7 +8123,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🥈 🇨🇦 186ms | VMESS (#648)
+- name: 🥈 🇨🇦 186ms | VMESS (#672)
   type: vmess
   server: 104.19.7.84
   port: 443
@@ -7825,7 +8136,7 @@ proxies:
   network: ws
   ws-opts:
     path: /y475
-- name: 🥈 🌐 186ms | VMESS (#649)
+- name: 🥈 🌐 186ms | VMESS (#673)
   type: vmess
   server: ParsVds.ir
   port: 443
@@ -7838,7 +8149,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🥈 🇨🇦 187ms | VMESS (#650)
+- name: 🥈 🇨🇦 187ms | VMESS (#674)
   type: vmess
   server: 104.19.36.160
   port: 443
@@ -7851,7 +8162,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🥈 🇨🇦 187ms | VMESS (#651)
+- name: 🥈 🇨🇦 187ms | VMESS (#675)
   type: vmess
   server: 104.21.48.161
   port: 443
@@ -7864,7 +8175,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🥈 🇨🇦 187ms | VMESS (#652)
+- name: 🥈 🇨🇦 187ms | VMESS (#676)
   type: vmess
   server: 104.25.52.187
   port: 443
@@ -7877,7 +8188,7 @@ proxies:
   network: ws
   ws-opts:
     path: /y475
-- name: 🥈 🇨🇦 187ms | VMESS (#653)
+- name: 🥈 🇨🇦 187ms | VMESS (#677)
   type: vmess
   server: 104.19.45.117
   port: 443
@@ -7890,7 +8201,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🥈 🇨🇦 187ms | VMESS (#654)
+- name: 🥈 🇨🇦 187ms | VMESS (#678)
   type: vmess
   server: 104.18.7.138
   port: 443
@@ -7903,7 +8214,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🥈 🇨🇦 187ms | VMESS (#655)
+- name: 🥈 🇨🇦 187ms | VMESS (#679)
   type: vmess
   server: 103.21.244.238
   port: 8443
@@ -7916,318 +8227,6 @@ proxies:
   network: ws
   ws-opts:
     path: /8cda48b3
-- name: 🥈 🇨🇦 187ms | VMESS (#656)
-  type: vmess
-  server: 103.21.244.248
-  port: 8443
-  uuid: a6a37e04-5e81-44c9-be53-baa3ff46eb8b
-  alterId: 0
-  cipher: auto
-  udp: true
-  tls: true
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /8cda48b3
-- name: 🥈 🇨🇦 187ms | VMESS (#657)
-  type: vmess
-  server: 172.67.199.34
-  port: 443
-  uuid: 8b6dd709-4d4e-4b92-f542-54a676efbfe4
-  alterId: 0
-  cipher: auto
-  udp: true
-  tls: true
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /shares
-- name: 🥈 🇨🇷 187ms | VMESS (#658)
-  type: vmess
-  server: 190.93.245.3
-  port: 443
-  uuid: 56a2188b-2ab7-402c-b9b8-34847fdf0958
-  alterId: 0
-  cipher: auto
-  udp: true
-  tls: true
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /5QNROSRV
-- name: 🥈 🇨🇦 187ms | VMESS (#659)
-  type: vmess
-  server: 104.18.100.193
-  port: 2082
-  uuid: 36fa45db-2d4a-4295-a1fe-223836989878
-  alterId: 0
-  cipher: auto
-  udp: true
-  tls: false
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /pineapple
-- name: 🥈 🇨🇦 187ms | VMESS (#660)
-  type: vmess
-  server: 162.159.128.7
-  port: 443
-  uuid: 56a2188b-2ab7-402c-b9b8-34847fdf0958
-  alterId: 0
-  cipher: auto
-  udp: true
-  tls: true
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /5QNROSRV
-- name: 🥈 🇬🇧 187ms | VMESS (#661)
-  type: vmess
-  server: 51.75.160.126
-  port: 80
-  uuid: b739a204-ea0d-428b-bbf5-a632ec05edcf
-  alterId: 0
-  cipher: auto
-  udp: true
-  tls: false
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /vmess
-- name: 🥈 🇨🇦 187ms | VMESS (#662)
-  type: vmess
-  server: 188.114.97.111
-  port: 443
-  uuid: 9e6ceeff-2546-3690-ac00-6fcdf31dec94
-  alterId: 0
-  cipher: auto
-  udp: true
-  tls: true
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /chcara
-- name: 🥈 🇨🇦 188ms | VMESS (#663)
-  type: vmess
-  server: 172.67.203.162
-  port: 443
-  uuid: c5a2d7b8-bf84-4f97-8577-b9b87f2baaf7
-  alterId: 0
-  cipher: auto
-  udp: true
-  tls: true
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /AUIKN8AU
-- name: 🥈 🇧🇿 188ms | VMESS (#664)
-  type: vmess
-  server: 203.30.191.5
-  port: 443
-  uuid: c5a2d7b8-bf84-4f97-8577-b9b87f2baaf7
-  alterId: 0
-  cipher: auto
-  udp: true
-  tls: true
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /AUIKN8AU
-- name: 🥈 🇨🇦 188ms | VMESS (#665)
-  type: vmess
-  server: 172.67.164.125
-  port: 443
-  uuid: c5a2d7b8-bf84-4f97-8577-b9b87f2baaf7
-  alterId: 0
-  cipher: auto
-  udp: true
-  tls: true
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /AUIKN8AU
-- name: 🥈 🇧🇿 188ms | VMESS (#666)
-  type: vmess
-  server: 203.30.191.192
-  port: 443
-  uuid: 56a2188b-2ab7-402c-b9b8-34847fdf0958
-  alterId: 0
-  cipher: auto
-  udp: true
-  tls: true
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /5QNROSRV
-- name: 🥈 🇨🇦 188ms | VMESS (#667)
-  type: vmess
-  server: 23.227.38.40
-  port: 443
-  uuid: 17b2a313-37a0-4945-a8e4-e63375506b4a
-  alterId: 0
-  cipher: auto
-  udp: true
-  tls: true
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /A2DJOPFT
-- name: 🥈 🇨🇦 188ms | VMESS (#668)
-  type: vmess
-  server: 172.64.156.232
-  port: 8443
-  uuid: a6a37e04-5e81-44c9-be53-baa3ff46eb8b
-  alterId: 0
-  cipher: auto
-  udp: true
-  tls: true
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /8cda48b3
-- name: 🥈 🇧🇿 188ms | VMESS (#669)
-  type: vmess
-  server: 203.30.188.189
-  port: 443
-  uuid: 56a2188b-2ab7-402c-b9b8-34847fdf0958
-  alterId: 0
-  cipher: auto
-  udp: true
-  tls: true
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /5QNROSRV
-- name: 🥈 🇨🇦 188ms | VMESS (#670)
-  type: vmess
-  server: 172.66.44.197
-  port: 443
-  uuid: fa4cb529-3ac9-4268-bb04-ed4253813508
-  alterId: 0
-  cipher: auto
-  udp: true
-  tls: true
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /mR17oBKzZ7
-- name: 🥈 🇨🇾 188ms | VMESS (#671)
-  type: vmess
-  server: 203.24.108.8
-  port: 443
-  uuid: c5a2d7b8-bf84-4f97-8577-b9b87f2baaf7
-  alterId: 0
-  cipher: auto
-  udp: true
-  tls: true
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /AUIKN8AU
-- name: 🥈 🇨🇦 188ms | VMESS (#672)
-  type: vmess
-  server: 172.67.201.14
-  port: 443
-  uuid: c5a2d7b8-bf84-4f97-8577-b9b87f2baaf7
-  alterId: 0
-  cipher: auto
-  udp: true
-  tls: true
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /AUIKN8AU
-- name: 🥈 🇨🇦 188ms | VMESS (#673)
-  type: vmess
-  server: 172.67.207.209
-  port: 2082
-  uuid: 082122a2-8479-4089-82f0-f32ba5fc5426
-  alterId: 0
-  cipher: auto
-  udp: true
-  tls: false
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /bb
-- name: 🥈 🇨🇦 188ms | VMESS (#674)
-  type: vmess
-  server: 23.227.38.26
-  port: 443
-  uuid: c5a2d7b8-bf84-4f97-8577-b9b87f2baaf7
-  alterId: 0
-  cipher: auto
-  udp: true
-  tls: true
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /AUIKN8AU
-- name: 🥈 🇧🇿 188ms | VMESS (#675)
-  type: vmess
-  server: 203.30.188.121
-  port: 443
-  uuid: c5a2d7b8-bf84-4f97-8577-b9b87f2baaf7
-  alterId: 0
-  cipher: auto
-  udp: true
-  tls: true
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /AUIKN8AU
-- name: 🥈 🇧🇿 188ms | VMESS (#676)
-  type: vmess
-  server: 203.30.191.2
-  port: 443
-  uuid: c5a2d7b8-bf84-4f97-8577-b9b87f2baaf7
-  alterId: 0
-  cipher: auto
-  udp: true
-  tls: true
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /AUIKN8AU
-- name: 🥈 🇨🇦 188ms | VMESS (#677)
-  type: vmess
-  server: 23.227.38.38
-  port: 443
-  uuid: c5a2d7b8-bf84-4f97-8577-b9b87f2baaf7
-  alterId: 0
-  cipher: auto
-  udp: true
-  tls: true
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /AUIKN8AU
-- name: 🥈 🇨🇦 188ms | VMESS (#678)
-  type: vmess
-  server: 172.67.178.127
-  port: 443
-  uuid: 26b5fbcf-d199-407e-e8bf-96d7489d247d
-  alterId: 0
-  cipher: auto
-  udp: true
-  tls: true
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /123
-- name: 🥈 🇺🇸 188ms | VMESS (#679)
-  type: vmess
-  server: 141.193.213.21
-  port: 443
-  uuid: 2b214122-1906-428a-bbb7-a039cbb7cd5c
-  alterId: 0
-  cipher: auto
-  udp: true
-  tls: true
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /9JZFDTKE
 proxy-groups:
 - name: 🚀 Auto Select
   type: url-test
@@ -8882,38 +8881,38 @@ proxy-groups:
   - 🥈 🇩🇪 175ms | VMESS (#644)
   - 🥈 🇺🇸 175ms | VMESS (#645)
   - 🥈 🌐 176ms | VMESS (#646)
-  - 🥈 🇨🇦 186ms | VMESS (#647)
-  - 🥈 🇨🇦 186ms | VMESS (#648)
-  - 🥈 🌐 186ms | VMESS (#649)
-  - 🥈 🇨🇦 187ms | VMESS (#650)
-  - 🥈 🇨🇦 187ms | VMESS (#651)
-  - 🥈 🇨🇦 187ms | VMESS (#652)
-  - 🥈 🇨🇦 187ms | VMESS (#653)
-  - 🥈 🇨🇦 187ms | VMESS (#654)
-  - 🥈 🇨🇦 187ms | VMESS (#655)
-  - 🥈 🇨🇦 187ms | VMESS (#656)
-  - 🥈 🇨🇦 187ms | VMESS (#657)
-  - 🥈 🇨🇷 187ms | VMESS (#658)
-  - 🥈 🇨🇦 187ms | VMESS (#659)
-  - 🥈 🇨🇦 187ms | VMESS (#660)
-  - 🥈 🇬🇧 187ms | VMESS (#661)
-  - 🥈 🇨🇦 187ms | VMESS (#662)
-  - 🥈 🇨🇦 188ms | VMESS (#663)
-  - 🥈 🇧🇿 188ms | VMESS (#664)
-  - 🥈 🇨🇦 188ms | VMESS (#665)
-  - 🥈 🇧🇿 188ms | VMESS (#666)
-  - 🥈 🇨🇦 188ms | VMESS (#667)
-  - 🥈 🇨🇦 188ms | VMESS (#668)
-  - 🥈 🇧🇿 188ms | VMESS (#669)
-  - 🥈 🇨🇦 188ms | VMESS (#670)
-  - 🥈 🇨🇾 188ms | VMESS (#671)
-  - 🥈 🇨🇦 188ms | VMESS (#672)
-  - 🥈 🇨🇦 188ms | VMESS (#673)
-  - 🥈 🇨🇦 188ms | VMESS (#674)
-  - 🥈 🇧🇿 188ms | VMESS (#675)
-  - 🥈 🇧🇿 188ms | VMESS (#676)
-  - 🥈 🇨🇦 188ms | VMESS (#677)
-  - 🥈 🇨🇦 188ms | VMESS (#678)
-  - 🥈 🇺🇸 188ms | VMESS (#679)
+  - 🥈 🇨🇦 180ms | VMESS (#647)
+  - 🥈 🇨🇦 180ms | VMESS (#648)
+  - 🥈 🇨🇦 180ms | VMESS (#649)
+  - 🥈 🇨🇦 180ms | VMESS (#650)
+  - 🥈 🇨🇦 180ms | VMESS (#651)
+  - 🥈 🇨🇦 180ms | VMESS (#652)
+  - 🥈 🇨🇦 180ms | VMESS (#653)
+  - 🥈 🇺🇸 180ms | VMESS (#654)
+  - 🥈 🇨🇦 181ms | VMESS (#655)
+  - 🥈 🇺🇸 181ms | VMESS (#656)
+  - 🥈 🇨🇦 181ms | VMESS (#657)
+  - 🥈 🇨🇦 181ms | VMESS (#658)
+  - 🥈 🇨🇦 181ms | VMESS (#659)
+  - 🥈 🇨🇦 181ms | VMESS (#660)
+  - 🥈 🇨🇷 181ms | VMESS (#661)
+  - 🥈 🇨🇦 181ms | VMESS (#662)
+  - 🥈 🇨🇦 181ms | VMESS (#663)
+  - 🥈 🇷🇺 181ms | VMESS (#664)
+  - 🥈 🇨🇦 181ms | VMESS (#665)
+  - 🥈 🇨🇦 181ms | VMESS (#666)
+  - 🥈 🇨🇦 181ms | VMESS (#667)
+  - 🥈 🇨🇦 181ms | VMESS (#668)
+  - 🥈 🇨🇦 181ms | VMESS (#669)
+  - 🥈 🇨🇦 181ms | VMESS (#670)
+  - 🥈 🇨🇦 186ms | VMESS (#671)
+  - 🥈 🇨🇦 186ms | VMESS (#672)
+  - 🥈 🌐 186ms | VMESS (#673)
+  - 🥈 🇨🇦 187ms | VMESS (#674)
+  - 🥈 🇨🇦 187ms | VMESS (#675)
+  - 🥈 🇨🇦 187ms | VMESS (#676)
+  - 🥈 🇨🇦 187ms | VMESS (#677)
+  - 🥈 🇨🇦 187ms | VMESS (#678)
+  - 🥈 🇨🇦 187ms | VMESS (#679)
 rules:
 - MATCH,🚀 Auto Select
