--- a/proxies.yaml
+++ b/proxies.yaml
@@ -15879,20 +15879,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🥈 🇨🇦 70ms | VMESS (#1478)
-  type: vmess
-  server: 172.67.219.194
-  port: 443
-  uuid: b321fd5d-e6ec-4293-a644-164e3885f52e
-  alterId: 0
-  cipher: auto
-  udp: true
-  tls: true
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /
-- name: 🥈 🇺🇸 71ms | VMESS (#1479)
+- name: 🥈 🇺🇸 71ms | VMESS (#1478)
   type: vmess
   server: 172.111.38.233
   port: 443
@@ -15905,7 +15892,7 @@ proxies:
   network: ws
   ws-opts:
     path: /linkvws
-- name: 🥈 🇨🇦 71ms | VMESS (#1480)
+- name: 🥈 🇨🇦 71ms | VMESS (#1479)
   type: vmess
   server: 23.162.200.94
   port: 443
@@ -15918,7 +15905,7 @@ proxies:
   network: ws
   ws-opts:
     path: /linkvws
-- name: 🥈 🇺🇸 71ms | VMESS (#1481)
+- name: 🥈 🇺🇸 71ms | VMESS (#1480)
   type: vmess
   server: 38.99.82.253
   port: 443
@@ -15931,7 +15918,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🥈 🇧🇬 71ms | VMESS (#1482)
+- name: 🥈 🇧🇬 71ms | VMESS (#1481)
   type: vmess
   server: 147.78.140.30
   port: 443
@@ -15944,7 +15931,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🥈 🇨🇦 71ms | VMESS (#1483)
+- name: 🥈 🇨🇦 71ms | VMESS (#1482)
   type: vmess
   server: 104.16.67.38
   port: 2052
@@ -15957,7 +15944,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🥈 🇨🇦 71ms | VMESS (#1484)
+- name: 🥈 🇨🇦 71ms | VMESS (#1483)
   type: vmess
   server: 172.67.193.108
   port: 443
@@ -15970,7 +15957,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🥈 🇨🇦 71ms | VMESS (#1485)
+- name: 🥈 🇨🇦 71ms | VMESS (#1484)
   type: vmess
   server: 104.21.83.115
   port: 443
@@ -15983,7 +15970,7 @@ proxies:
   network: ws
   ws-opts:
     path: /link
-- name: 🥈 🇨🇦 71ms | VMESS (#1486)
+- name: 🥈 🇨🇦 71ms | VMESS (#1485)
   type: vmess
   server: 104.16.68.38
   port: 2052
@@ -15996,7 +15983,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🥈 🇨🇦 71ms | VMESS (#1487)
+- name: 🥈 🇨🇦 71ms | VMESS (#1486)
   type: vmess
   server: 104.21.1.32
   port: 443
@@ -16009,7 +15996,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🥈 🇸🇬 71ms | VMESS (#1488)
+- name: 🥈 🇸🇬 71ms | VMESS (#1487)
   type: vmess
   server: 206.238.236.36
   port: 2052
@@ -16022,7 +16009,7 @@ proxies:
   network: ws
   ws-opts:
     path: /afrhms16v.bestxray.buzz/linkws
-- name: 🥈 🇨🇦 71ms | VMESS (#1489)
+- name: 🥈 🇨🇦 71ms | VMESS (#1488)
   type: vmess
   server: 104.16.61.8
   port: 2052
@@ -16035,7 +16022,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🥈 🇺🇸 71ms | VMESS (#1490)
+- name: 🥈 🇺🇸 71ms | VMESS (#1489)
   type: vmess
   server: 38.48.227.231
   port: 47778
@@ -16048,7 +16035,7 @@ proxies:
   network: ws
   ws-opts:
     path: /path/240811062813
-- name: 🥈 🇨🇦 71ms | VMESS (#1491)
+- name: 🥈 🇨🇦 71ms | VMESS (#1490)
   type: vmess
   server: 104.18.62.204
   port: 2086
@@ -16061,7 +16048,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🥈 🇨🇦 71ms | VMESS (#1492)
+- name: 🥈 🇨🇦 71ms | VMESS (#1491)
   type: vmess
   server: 104.16.67.38
   port: 2052
@@ -16074,7 +16061,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🥈 🇨🇦 71ms | VMESS (#1493)
+- name: 🥈 🇨🇦 71ms | VMESS (#1492)
   type: vmess
   server: 104.17.197.31
   port: 443
@@ -16087,7 +16074,7 @@ proxies:
   network: ws
   ws-opts:
     path: /ivideos.sbs/linkws
-- name: 🥈 🇨🇦 71ms | VMESS (#1494)
+- name: 🥈 🇨🇦 71ms | VMESS (#1493)
   type: vmess
   server: 173.245.58.5
   port: 443
@@ -16100,7 +16087,7 @@ proxies:
   network: ws
   ws-opts:
     path: /glweidf.sbs/linkws
-- name: 🥈 🇨🇦 71ms | VMESS (#1495)
+- name: 🥈 🇨🇦 71ms | VMESS (#1494)
   type: vmess
   server: 173.245.58.37
   port: 443
@@ -16113,7 +16100,7 @@ proxies:
   network: ws
   ws-opts:
     path: /glweidf.cfd/linkws
-- name: 🥈 🇧🇬 71ms | VMESS (#1496)
+- name: 🥈 🇧🇬 71ms | VMESS (#1495)
   type: vmess
   server: 147.78.140.68
   port: 443
@@ -16126,7 +16113,7 @@ proxies:
   network: ws
   ws-opts:
     path: /afrhms16v.bestxray.buzz/linkws
-- name: 🥈 🇨🇾 71ms | VMESS (#1497)
+- name: 🥈 🇨🇾 71ms | VMESS (#1496)
   type: vmess
   server: 195.85.59.22
   port: 443
@@ -16139,7 +16126,7 @@ proxies:
   network: ws
   ws-opts:
     path: /afrhms16v.bestxray.buzz/linkws
-- name: 🥈 🇨🇦 71ms | VMESS (#1498)
+- name: 🥈 🇨🇦 71ms | VMESS (#1497)
   type: vmess
   server: 104.18.25.92
   port: 2052
@@ -16152,7 +16139,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🥈 🇧🇬 71ms | VMESS (#1499)
+- name: 🥈 🇧🇬 71ms | VMESS (#1498)
   type: vmess
   server: 147.78.140.231
   port: 443
@@ -16165,6 +16152,19 @@ proxies:
   network: ws
   ws-opts:
     path: /afrhms16v.bestxray.buzz/linkws
+- name: 🥈 🇨🇦 71ms | VMESS (#1499)
+  type: vmess
+  server: 104.31.16.47
+  port: 80
+  uuid: 8abe9496-5e24-4e49-b566-dcf86116017d
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: false
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /i99LgvSaslbsPLLQQ7j6Z
 proxy-groups:
 - name: 🚀 Auto Select
   type: url-test
@@ -17650,27 +17650,27 @@ proxy-groups:
   - 🥈 🌐 70ms | VMESS (#1475)
   - 🥈 🇺🇸 70ms | VMESS (#1476)
   - 🥈 🇺🇸 70ms | VMESS (#1477)
-  - 🥈 🇨🇦 70ms | VMESS (#1478)
-  - 🥈 🇺🇸 71ms | VMESS (#1479)
-  - 🥈 🇨🇦 71ms | VMESS (#1480)
-  - 🥈 🇺🇸 71ms | VMESS (#1481)
-  - 🥈 🇧🇬 71ms | VMESS (#1482)
+  - 🥈 🇺🇸 71ms | VMESS (#1478)
+  - 🥈 🇨🇦 71ms | VMESS (#1479)
+  - 🥈 🇺🇸 71ms | VMESS (#1480)
+  - 🥈 🇧🇬 71ms | VMESS (#1481)
+  - 🥈 🇨🇦 71ms | VMESS (#1482)
   - 🥈 🇨🇦 71ms | VMESS (#1483)
   - 🥈 🇨🇦 71ms | VMESS (#1484)
   - 🥈 🇨🇦 71ms | VMESS (#1485)
   - 🥈 🇨🇦 71ms | VMESS (#1486)
-  - 🥈 🇨🇦 71ms | VMESS (#1487)
-  - 🥈 🇸🇬 71ms | VMESS (#1488)
-  - 🥈 🇨🇦 71ms | VMESS (#1489)
-  - 🥈 🇺🇸 71ms | VMESS (#1490)
+  - 🥈 🇸🇬 71ms | VMESS (#1487)
+  - 🥈 🇨🇦 71ms | VMESS (#1488)
+  - 🥈 🇺🇸 71ms | VMESS (#1489)
+  - 🥈 🇨🇦 71ms | VMESS (#1490)
   - 🥈 🇨🇦 71ms | VMESS (#1491)
   - 🥈 🇨🇦 71ms | VMESS (#1492)
   - 🥈 🇨🇦 71ms | VMESS (#1493)
   - 🥈 🇨🇦 71ms | VMESS (#1494)
-  - 🥈 🇨🇦 71ms | VMESS (#1495)
-  - 🥈 🇧🇬 71ms | VMESS (#1496)
-  - 🥈 🇨🇾 71ms | VMESS (#1497)
-  - 🥈 🇨🇦 71ms | VMESS (#1498)
-  - 🥈 🇧🇬 71ms | VMESS (#1499)
+  - 🥈 🇧🇬 71ms | VMESS (#1495)
+  - 🥈 🇨🇾 71ms | VMESS (#1496)
+  - 🥈 🇨🇦 71ms | VMESS (#1497)
+  - 🥈 🇧🇬 71ms | VMESS (#1498)
+  - 🥈 🇨🇦 71ms | VMESS (#1499)
 rules:
 - MATCH,🚀 Auto Select
