--- a/proxies.yaml
+++ b/proxies.yaml
@@ -15859,7 +15859,20 @@ proxies:
   network: ws
   ws-opts:
     path: /wss13889
-- name: 🥈 🌐 67ms | VMESS (#1449)
+- name: 🥈 🇮🇷 66ms | VMESS (#1449)
+  type: vmess
+  server: 185.143.233.101
+  port: 80
+  uuid: 51e45a11-f3de-48bb-895a-13f87a626d07
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: false
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /ray
+- name: 🥈 🌐 67ms | VMESS (#1450)
   type: vmess
   server: cdnde.irteyz.today
   port: 443
@@ -15872,7 +15885,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🥈 🌐 67ms | VMESS (#1450)
+- name: 🥈 🌐 67ms | VMESS (#1451)
   type: vmess
   server: ping.pe
   port: 443
@@ -15885,7 +15898,33 @@ proxies:
   network: ws
   ws-opts:
     path: /111111.online
-- name: 🥈 🇺🇸💻 68ms | VMESS (#1451)
+- name: 🥈 🇬🇧 67ms | VMESS (#1452)
+  type: vmess
+  server: 45.85.119.230
+  port: 2053
+  uuid: 3648710b-5c9f-4494-c5ae-d74b1f73c3f9
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: true
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /jjjjjjjjjjjjjjjjjjjjjjjjjjkkopkk
+- name: 🥈 🇨🇦 67ms | VMESS (#1453)
+  type: vmess
+  server: 173.245.49.190
+  port: 8443
+  uuid: a6a37e04-5e81-44c9-be53-baa3ff46eb8b
+  alterId: 0
+  cipher: auto
+  udp: true
+  tls: true
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /8cda48b3
+- name: 🥈 🇺🇸💻 68ms | VMESS (#1454)
   type: vmess
   server: 209.54.104.219
   port: 43966
@@ -15897,7 +15936,7 @@ proxies:
   skip-cert-verify: true
   network: tcp
   ws-opts: null
-- name: 🥈 🇺🇸💻 68ms | VMESS (#1452)
+- name: 🥈 🇺🇸💻 68ms | VMESS (#1455)
   type: vmess
   server: 209.54.104.219
   port: 43966
@@ -15909,7 +15948,7 @@ proxies:
   skip-cert-verify: true
   network: tcp
   ws-opts: null
-- name: 🥈 🇺🇸💻 68ms | VMESS (#1453)
+- name: 🥈 🇺🇸💻 68ms | VMESS (#1456)
   type: vmess
   server: 209.54.104.219
   port: 43966
@@ -15921,7 +15960,7 @@ proxies:
   skip-cert-verify: true
   network: tcp
   ws-opts: null
-- name: 🥈 🇨🇾 68ms | VMESS (#1454)
+- name: 🥈 🇨🇾 68ms | VMESS (#1457)
   type: vmess
   server: 203.24.108.8
   port: 443
@@ -15934,7 +15973,7 @@ proxies:
   network: ws
   ws-opts:
     path: /AUIKN8AU
-- name: 🥈 🇨🇦 68ms | VMESS (#1455)
+- name: 🥈 🇨🇦 68ms | VMESS (#1458)
   type: vmess
   server: 172.67.201.14
   port: 443
@@ -15947,7 +15986,7 @@ proxies:
   network: ws
   ws-opts:
     path: /AUIKN8AU
-- name: 🥈 🇨🇦 68ms | VMESS (#1456)
+- name: 🥈 🇨🇦 68ms | VMESS (#1459)
   type: vmess
   server: 172.67.207.209
   port: 2082
@@ -15960,7 +15999,7 @@ proxies:
   network: ws
   ws-opts:
     path: /bb
-- name: 🥈 🇨🇦 68ms | VMESS (#1457)
+- name: 🥈 🇨🇦 68ms | VMESS (#1460)
   type: vmess
   server: 23.227.38.26
   port: 443
@@ -15973,7 +16012,7 @@ proxies:
   network: ws
   ws-opts:
     path: /AUIKN8AU
-- name: 🥈 🇧🇿 68ms | VMESS (#1458)
+- name: 🥈 🇧🇿 68ms | VMESS (#1461)
   type: vmess
   server: 203.30.188.121
   port: 443
@@ -15986,7 +16025,7 @@ proxies:
   network: ws
   ws-opts:
     path: /AUIKN8AU
-- name: 🥈 🇧🇿 68ms | VMESS (#1459)
+- name: 🥈 🇧🇿 68ms | VMESS (#1462)
   type: vmess
   server: 203.30.191.2
   port: 443
@@ -15999,7 +16038,7 @@ proxies:
   network: ws
   ws-opts:
     path: /AUIKN8AU
-- name: 🥈 🇨🇦 68ms | VMESS (#1460)
+- name: 🥈 🇨🇦 68ms | VMESS (#1463)
   type: vmess
   server: 23.227.38.38
   port: 443
@@ -16012,7 +16051,7 @@ proxies:
   network: ws
   ws-opts:
     path: /AUIKN8AU
-- name: 🥈 🇨🇦 68ms | VMESS (#1461)
+- name: 🥈 🇨🇦 68ms | VMESS (#1464)
   type: vmess
   server: 172.67.178.127
   port: 443
@@ -16025,7 +16064,7 @@ proxies:
   network: ws
   ws-opts:
     path: /123
-- name: 🥈 🇺🇸 68ms | VMESS (#1462)
+- name: 🥈 🇺🇸 68ms | VMESS (#1465)
   type: vmess
   server: 141.193.213.21
   port: 443
@@ -16038,7 +16077,7 @@ proxies:
   network: ws
   ws-opts:
     path: /9JZFDTKE
-- name: 🥈 🇨🇦 68ms | VMESS (#1463)
+- name: 🥈 🇨🇦 68ms | VMESS (#1466)
   type: vmess
   server: 172.67.132.15
   port: 443
@@ -16051,7 +16090,7 @@ proxies:
   network: ws
   ws-opts:
     path: /ray
-- name: 🥈 🌐 68ms | VMESS (#1464)
+- name: 🥈 🌐 68ms | VMESS (#1467)
   type: vmess
   server: get.tech
   port: 80
@@ -16064,7 +16103,7 @@ proxies:
   network: ws
   ws-opts:
     path: /shared
-- name: 🥈 🇨🇦 68ms | VMESS (#1465)
+- name: 🥈 🇨🇦 68ms | VMESS (#1468)
   type: vmess
   server: 172.67.205.70
   port: 443
@@ -16077,7 +16116,7 @@ proxies:
   network: ws
   ws-opts:
     path: /shirker
-- name: 🥈 🇨🇦 68ms | VMESS (#1466)
+- name: 🥈 🇨🇦 68ms | VMESS (#1469)
   type: vmess
   server: 172.67.77.95
   port: 443
@@ -16090,7 +16129,7 @@ proxies:
   network: ws
   ws-opts:
     path: /fthe4gsefgtdu
-- name: 🥈 🇺🇸💻 69ms | VMESS (#1467)
+- name: 🥈 🇺🇸💻 69ms | VMESS (#1470)
   type: vmess
   server: 209.54.104.219
   port: 43966
@@ -16102,7 +16141,7 @@ proxies:
   skip-cert-verify: true
   network: tcp
   ws-opts: null
-- name: 🥈 🇧🇿 69ms | VMESS (#1468)
+- name: 🥈 🇧🇿 69ms | VMESS (#1471)
   type: vmess
   server: 203.30.188.189
   port: 443
@@ -16115,7 +16154,7 @@ proxies:
   network: ws
   ws-opts:
     path: /5QNROSRV
-- name: 🥈 🇨🇦 69ms | VMESS (#1469)
+- name: 🥈 🇨🇦 69ms | VMESS (#1472)
   type: vmess
   server: 172.66.44.197
   port: 443
@@ -16128,7 +16167,7 @@ proxies:
   network: ws
   ws-opts:
     path: /mR17oBKzZ7
-- name: 🥈 🇨🇦 69ms | VMESS (#1470)
+- name: 🥈 🇨🇦 69ms | VMESS (#1473)
   type: vmess
   server: 162.159.152.4
   port: 443
@@ -16141,7 +16180,7 @@ proxies:
   network: ws
   ws-opts:
     path: /vmessws
-- name: 🥈 🇨🇦 69ms | VMESS (#1471)
+- name: 🥈 🇨🇦 69ms | VMESS (#1474)
   type: vmess
   server: 188.114.97.111
   port: 443
@@ -16154,7 +16193,7 @@ proxies:
   network: ws
   ws-opts:
     path: /chcara
-- name: 🥈 🇺🇸 69ms | VMESS (#1472)
+- name: 🥈 🇺🇸 69ms | VMESS (#1475)
   type: vmess
   server: 15.204.64.211
   port: 443
@@ -16167,7 +16206,7 @@ proxies:
   network: ws
   ws-opts:
     path: linkvws
-- name: 🥈 🇨🇦 69ms | VMESS (#1473)
+- name: 🥈 🇨🇦 69ms | VMESS (#1476)
   type: vmess
   server: 172.67.210.98
   port: 2095
@@ -16180,7 +16219,7 @@ proxies:
   network: ws
   ws-opts:
     path: /hgcefomn
-- name: 🥈 🇨🇾 69ms | VMESS (#1474)
+- name: 🥈 🇨🇾 69ms | VMESS (#1477)
   type: vmess
   server: 154.92.9.132
   port: 443
@@ -16193,7 +16232,7 @@ proxies:
   network: ws
   ws-opts:
     path: /blue
-- name: 🥈 🇨🇾 69ms | VMESS (#1475)
+- name: 🥈 🇨🇾 69ms | VMESS (#1478)
   type: vmess
   server: 154.92.9.121
   port: 80
@@ -16206,7 +16245,7 @@ proxies:
   network: ws
   ws-opts:
     path: /blue
-- name: 🥈 🇨🇾 69ms | VMESS (#1476)
+- name: 🥈 🇨🇾 69ms | VMESS (#1479)
   type: vmess
   server: 154.92.9.119
   port: 443
@@ -16219,7 +16258,7 @@ proxies:
   network: ws
   ws-opts:
     path: /blue
-- name: 🥈 🇨🇾 69ms | VMESS (#1477)
+- name: 🥈 🇨🇾 69ms | VMESS (#1480)
   type: vmess
   server: 154.92.9.115
   port: 443
@@ -16232,7 +16271,7 @@ proxies:
   network: ws
   ws-opts:
     path: /blue
-- name: 🥈 🇨🇾 69ms | VMESS (#1478)
+- name: 🥈 🇨🇾 69ms | VMESS (#1481)
   type: vmess
   server: 154.92.9.115
   port: 80
@@ -16245,7 +16284,7 @@ proxies:
   network: ws
   ws-opts:
     path: /blue
-- name: 🥈 🇨🇾 69ms | VMESS (#1479)
+- name: 🥈 🇨🇾 69ms | VMESS (#1482)
   type: vmess
   server: 154.92.9.101
   port: 80
@@ -16258,7 +16297,7 @@ proxies:
   network: ws
   ws-opts:
     path: /blue
-- name: 🥈 🇺🇸 69ms | VMESS (#1480)
+- name: 🥈 🇺🇸 69ms | VMESS (#1483)
   type: vmess
   server: 147.185.161.169
   port: 443
@@ -16271,7 +16310,7 @@ proxies:
   network: ws
   ws-opts:
     path: /wss13889
-- name: 🥈 🇨🇦 69ms | VMESS (#1481)
+- name: 🥈 🇨🇦 69ms | VMESS (#1484)
   type: vmess
   server: 104.31.16.65
   port: 443
@@ -16284,7 +16323,7 @@ proxies:
   network: ws
   ws-opts:
     path: /12796?ed=2048
-- name: 🥈 🇨🇦 69ms | VMESS (#1482)
+- name: 🥈 🇨🇦 69ms | VMESS (#1485)
   type: vmess
   server: 104.31.16.65
   port: 443
@@ -16297,7 +16336,7 @@ proxies:
   network: ws
   ws-opts:
     path: /root/
-- name: 🥈 🇨🇦 69ms | VMESS (#1483)
+- name: 🥈 🇨🇦 69ms | VMESS (#1486)
   type: vmess
   server: 104.31.16.65
   port: 80
@@ -16310,7 +16349,7 @@ proxies:
   network: ws
   ws-opts:
     path: /uthjq4el
-- name: 🥈 🌐 70ms | VMESS (#1484)
+- name: 🥈 🌐 70ms | VMESS (#1487)
   type: vmess
   server: www.wto.org
   port: 2086
@@ -16323,7 +16362,7 @@ proxies:
   network: ws
   ws-opts:
     path: /?ed=1024
-- name: 🥈 🇺🇸 70ms | VMESS (#1485)
+- name: 🥈 🇺🇸 70ms | VMESS (#1488)
   type: vmess
   server: 67.21.75.40
   port: 45555
@@ -16336,7 +16375,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🥈 🇺🇸 70ms | VMESS (#1486)
+- name: 🥈 🇺🇸 70ms | VMESS (#1489)
   type: vmess
   server: 172.247.148.93
   port: 443
@@ -16349,7 +16388,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🥈 🇨🇦 70ms | VMESS (#1487)
+- name: 🥈 🇨🇦 70ms | VMESS (#1490)
   type: vmess
   server: 172.67.204.73
   port: 2095
@@ -16362,7 +16401,7 @@ proxies:
   network: ws
   ws-opts:
     path: /hgcefomn
-- name: 🥈 🇨🇦 70ms | VMESS (#1488)
+- name: 🥈 🇨🇦 70ms | VMESS (#1491)
   type: vmess
   server: 172.67.193.125
   port: 2095
@@ -16375,7 +16414,7 @@ proxies:
   network: ws
   ws-opts:
     path: /hgcefomn
-- name: 🥈 🇨🇦 70ms | VMESS (#1489)
+- name: 🥈 🇨🇦 70ms | VMESS (#1492)
   type: vmess
   server: 172.67.151.115
   port: 2095
@@ -16388,7 +16427,7 @@ proxies:
   network: ws
   ws-opts:
     path: /hgcefomn
-- name: 🥈 🇺🇸 71ms | VMESS (#1490)
+- name: 🥈 🇺🇸 71ms | VMESS (#1493)
   type: vmess
   server: 172.111.38.233
   port: 443
@@ -16401,7 +16440,7 @@ proxies:
   network: ws
   ws-opts:
     path: /linkvws
-- name: 🥈 🇨🇦 71ms | VMESS (#1491)
+- name: 🥈 🇨🇦 71ms | VMESS (#1494)
   type: vmess
   server: 23.162.200.94
   port: 443
@@ -16414,7 +16453,7 @@ proxies:
   network: ws
   ws-opts:
     path: /linkvws
-- name: 🥈 🇺🇸 71ms | VMESS (#1492)
+- name: 🥈 🇺🇸 71ms | VMESS (#1495)
   type: vmess
   server: 38.99.82.253
   port: 443
@@ -16427,7 +16466,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🥈 🇧🇬 71ms | VMESS (#1493)
+- name: 🥈 🇧🇬 71ms | VMESS (#1496)
   type: vmess
   server: 147.78.140.30
   port: 443
@@ -16440,7 +16479,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🥈 🇨🇦 71ms | VMESS (#1494)
+- name: 🥈 🇨🇦 71ms | VMESS (#1497)
   type: vmess
   server: 104.16.67.38
   port: 2052
@@ -16453,7 +16492,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🥈 🇨🇦 71ms | VMESS (#1495)
+- name: 🥈 🇨🇦 71ms | VMESS (#1498)
   type: vmess
   server: 172.67.193.108
   port: 443
@@ -16466,7 +16505,7 @@ proxies:
   network: ws
   ws-opts:
     path: /
-- name: 🥈 🇨🇦 71ms | VMESS (#1496)
+- name: 🥈 🇨🇦 71ms | VMESS (#1499)
   type: vmess
   server: 104.21.83.115
   port: 443
@@ -16479,45 +16518,6 @@ proxies:
   network: ws
   ws-opts:
     path: /link
-- name: 🥈 🇨🇦 71ms | VMESS (#1497)
-  type: vmess
-  server: 104.16.68.38
-  port: 2052
-  uuid: fe5edf04-c2af-4ac5-84ee-16d43024decb
-  alterId: 0
-  cipher: auto
-  udp: true
-  tls: false
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /
-- name: 🥈 🇨🇦 71ms | VMESS (#1498)
-  type: vmess
-  server: 104.21.1.32
-  port: 443
-  uuid: 48f837fa-12d0-498d-b5f6-94f9979736a4
-  alterId: 0
-  cipher: auto
-  udp: true
-  tls: true
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /
-- name: 🥈 🇸🇬 71ms | VMESS (#1499)
-  type: vmess
-  server: 206.238.236.36
-  port: 2052
-  uuid: f584de15-2034-4170-a723-f48c2bae5e0f
-  alterId: 0
-  cipher: auto
-  udp: true
-  tls: false
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /afrhms16v.bestxray.buzz/linkws
 proxy-groups:
 - name: 🚀 Auto Select
   type: url-test
@@ -17974,56 +17974,56 @@ proxy-groups:
   - 🥈 🇨🇦 66ms | VMESS (#1446)
   - 🥈 🇨🇦 66ms | VMESS (#1447)
   - 🥈 🇨🇦 66ms | VMESS (#1448)
-  - 🥈 🌐 67ms | VMESS (#1449)
+  - 🥈 🇮🇷 66ms | VMESS (#1449)
   - 🥈 🌐 67ms | VMESS (#1450)
-  - 🥈 🇺🇸💻 68ms | VMESS (#1451)
-  - 🥈 🇺🇸💻 68ms | VMESS (#1452)
-  - 🥈 🇺🇸💻 68ms | VMESS (#1453)
-  - 🥈 🇨🇾 68ms | VMESS (#1454)
-  - 🥈 🇨🇦 68ms | VMESS (#1455)
-  - 🥈 🇨🇦 68ms | VMESS (#1456)
-  - 🥈 🇨🇦 68ms | VMESS (#1457)
-  - 🥈 🇧🇿 68ms | VMESS (#1458)
-  - 🥈 🇧🇿 68ms | VMESS (#1459)
+  - 🥈 🌐 67ms | VMESS (#1451)
+  - 🥈 🇬🇧 67ms | VMESS (#1452)
+  - 🥈 🇨🇦 67ms | VMESS (#1453)
+  - 🥈 🇺🇸💻 68ms | VMESS (#1454)
+  - 🥈 🇺🇸💻 68ms | VMESS (#1455)
+  - 🥈 🇺🇸💻 68ms | VMESS (#1456)
+  - 🥈 🇨🇾 68ms | VMESS (#1457)
+  - 🥈 🇨🇦 68ms | VMESS (#1458)
+  - 🥈 🇨🇦 68ms | VMESS (#1459)
   - 🥈 🇨🇦 68ms | VMESS (#1460)
-  - 🥈 🇨🇦 68ms | VMESS (#1461)
-  - 🥈 🇺🇸 68ms | VMESS (#1462)
+  - 🥈 🇧🇿 68ms | VMESS (#1461)
+  - 🥈 🇧🇿 68ms | VMESS (#1462)
   - 🥈 🇨🇦 68ms | VMESS (#1463)
-  - 🥈 🌐 68ms | VMESS (#1464)
-  - 🥈 🇨🇦 68ms | VMESS (#1465)
+  - 🥈 🇨🇦 68ms | VMESS (#1464)
+  - 🥈 🇺🇸 68ms | VMESS (#1465)
   - 🥈 🇨🇦 68ms | VMESS (#1466)
-  - 🥈 🇺🇸💻 69ms | VMESS (#1467)
-  - 🥈 🇧🇿 69ms | VMESS (#1468)
-  - 🥈 🇨🇦 69ms | VMESS (#1469)
-  - 🥈 🇨🇦 69ms | VMESS (#1470)
-  - 🥈 🇨🇦 69ms | VMESS (#1471)
-  - 🥈 🇺🇸 69ms | VMESS (#1472)
+  - 🥈 🌐 68ms | VMESS (#1467)
+  - 🥈 🇨🇦 68ms | VMESS (#1468)
+  - 🥈 🇨🇦 68ms | VMESS (#1469)
+  - 🥈 🇺🇸💻 69ms | VMESS (#1470)
+  - 🥈 🇧🇿 69ms | VMESS (#1471)
+  - 🥈 🇨🇦 69ms | VMESS (#1472)
   - 🥈 🇨🇦 69ms | VMESS (#1473)
-  - 🥈 🇨🇾 69ms | VMESS (#1474)
-  - 🥈 🇨🇾 69ms | VMESS (#1475)
-  - 🥈 🇨🇾 69ms | VMESS (#1476)
+  - 🥈 🇨🇦 69ms | VMESS (#1474)
+  - 🥈 🇺🇸 69ms | VMESS (#1475)
+  - 🥈 🇨🇦 69ms | VMESS (#1476)
   - 🥈 🇨🇾 69ms | VMESS (#1477)
   - 🥈 🇨🇾 69ms | VMESS (#1478)
   - 🥈 🇨🇾 69ms | VMESS (#1479)
-  - 🥈 🇺🇸 69ms | VMESS (#1480)
-  - 🥈 🇨🇦 69ms | VMESS (#1481)
-  - 🥈 🇨🇦 69ms | VMESS (#1482)
-  - 🥈 🇨🇦 69ms | VMESS (#1483)
-  - 🥈 🌐 70ms | VMESS (#1484)
-  - 🥈 🇺🇸 70ms | VMESS (#1485)
-  - 🥈 🇺🇸 70ms | VMESS (#1486)
-  - 🥈 🇨🇦 70ms | VMESS (#1487)
-  - 🥈 🇨🇦 70ms | VMESS (#1488)
-  - 🥈 🇨🇦 70ms | VMESS (#1489)
-  - 🥈 🇺🇸 71ms | VMESS (#1490)
-  - 🥈 🇨🇦 71ms | VMESS (#1491)
-  - 🥈 🇺🇸 71ms | VMESS (#1492)
-  - 🥈 🇧🇬 71ms | VMESS (#1493)
+  - 🥈 🇨🇾 69ms | VMESS (#1480)
+  - 🥈 🇨🇾 69ms | VMESS (#1481)
+  - 🥈 🇨🇾 69ms | VMESS (#1482)
+  - 🥈 🇺🇸 69ms | VMESS (#1483)
+  - 🥈 🇨🇦 69ms | VMESS (#1484)
+  - 🥈 🇨🇦 69ms | VMESS (#1485)
+  - 🥈 🇨🇦 69ms | VMESS (#1486)
+  - 🥈 🌐 70ms | VMESS (#1487)
+  - 🥈 🇺🇸 70ms | VMESS (#1488)
+  - 🥈 🇺🇸 70ms | VMESS (#1489)
+  - 🥈 🇨🇦 70ms | VMESS (#1490)
+  - 🥈 🇨🇦 70ms | VMESS (#1491)
+  - 🥈 🇨🇦 70ms | VMESS (#1492)
+  - 🥈 🇺🇸 71ms | VMESS (#1493)
   - 🥈 🇨🇦 71ms | VMESS (#1494)
-  - 🥈 🇨🇦 71ms | VMESS (#1495)
-  - 🥈 🇨🇦 71ms | VMESS (#1496)
+  - 🥈 🇺🇸 71ms | VMESS (#1495)
+  - 🥈 🇧🇬 71ms | VMESS (#1496)
   - 🥈 🇨🇦 71ms | VMESS (#1497)
   - 🥈 🇨🇦 71ms | VMESS (#1498)
-  - 🥈 🇸🇬 71ms | VMESS (#1499)
+  - 🥈 🇨🇦 71ms | VMESS (#1499)
 rules:
 - MATCH,🚀 Auto Select
